# securechain-vexgen

./: .dockerignore  .env.template  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO  cves.txt  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  prueba.py  prueba.sh  prueba2.py  pyproject.toml  requirements.txt  ruff.toml  template.env
.github/workflows/: analisys.yml  github-release.yml  js_analysis.yml  lint-test.yml  py_analisys.yml  release.yml
app/: cache.py  config.py  constants.py  database.py  dependencies.py  exception_handler.py  http_session.py  logger.py  main.py  middleware.py  router.py  settings.py  validators.py
app/apis/: __init__.py  github_service.py  manager_service.py
app/apis/managers/: cargo_service.py  maven_service.py  mvn_service.py  npm_service.py  nuget_service.py  pip_service.py  pypi_service.py
app/controllers/: __init__.py  assisting_information_vex_controller.py  cve_controller.py  graph_controller.py  health_controller.py  tix_controller.py  vex_controller.py  vex_tix_controller.py
app/controllers/managers/: cargo_generate_controller.py  mvn_generate_controller.py  npm_generate_controller.py  pip_generate_controller.py
app/controllers/vul_dbs/: nvd_controller.py
app/domain/: __init__.py
app/domain/code_analyzer/: __init__.py  analyzer_factory.py
app/domain/vex_generation/: __init__.py  constants.py
app/exceptions/: __init__.py  clone_repo_exception.py  component_not_supported_exception.py  exceptions.py  expired_token_exception.py  invalid_repository_exception.py  invalid_sbom_exception.py  invalid_token_exception.py  not_authenticated_exception.py  sbom_not_found_exception.py  tix_not_found_exception.py  vex_not_found_exception.py
app/models/: api_key.py  statements_group.py
app/schemas/: __init__.py  http_status.py
app/schemas/commons/: __init__.py  mongo.py  processed_sbom_result.py
app/schemas/patterns/: __init__.py  regex_patterns.py
app/schemas/tix/: __init__.py  download_tix_request.py  tix.py
app/schemas/utils/: __init__.py  node_type.py
app/schemas/vex/: __init__.py  download_vex_request.py  generate_vex_request.py  generate_vex_tix_request.py  vex.py
app/schemas/vex_tix/: __init__.py  generate_vex_tix_request.py
app/services/: __init__.py  cve_service.py  cwe_service.py  env_variables_service.py  exploit_service.py  package_service.py  repository_service.py  requirement_file_service.py  tix_service.py  version_service.py  vex_service.py  vulnerability_service.py
app/services/dbs/: databases.py  indexes.py
app/templates/: __init__.py  statement_info_template.json  statement_template.json  van_template.json  vex_template.json
app/utils/: __init__.py  api_key_bearer.py  code_analyzer.py  dual_auth_bearer.py  get_first_pos.py  jwt_bearer.py  metrics.py  parse_pip_constraints.py  repo_analyzer.py
backend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  nginx.conf  requirements.txt  ruff.toml
backend/app/: config.py  exception_handler.py  logger.py  main.py  middleware.py  router.py
dev/: Dockerfile  docker-compose.yml
experiments/: README.MD  experiment.py  repos_sbom.txt
frontend/: .env.production  Dockerfile  Dockerfile.dev  Dockerfile.prod  eslint.config.mjs  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
motivating_example/: van.json  vex.json
motivating_example/files/: paramiko_test.py
running_example/: extended_vex.json  requirements.txt  sbom.json  vex.json
running_example/files/: pycrypto_test.py
seeds/: graphdb_seeder.bat  graphdb_seeder.sh  mongo_seeder.sh  neo4j_seeder.sh  vulndb_seeder.bat  vulndb_seeder.sh
tests/: conftest.py
tests/integration/: test_health_controller.py  test_tix_controller.py  test_vex_controller.py  test_vex_tix_controller.py
(+212 files in other folders)
