[project]
name = "securechain-vexgen"
version = "1.1.0"
description = "A simple generating tool of Vulnerability Exploitability eXchange (VEX) and Threat Intelligence eXchange (TIX) files"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic-settings==2.7.0",
    "motor==3.6.0",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0",
    "neo4j==5.27.0",
    "univers==30.12.1",
    "GitPython==3.1.43",
    "toml==0.10.2",
    "regex==2024.11.6",
    "pyjwt==2.10.1",
    "aiohttp==3.11.11",
    "aiofiles==24.1.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.0",
]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov>=7.0.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
exclude = ["tests*", "dev*"]

[tool.hatch.build.targets.sdist]
exclude = ["tests*", "dev*"]

[tool.ruff.lint]
select = [
    "A",   # prevent using keywords that clobber python builtins
    "B",   # bugbear: security warnings
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF"  # the ruff developer's own rules
]

ignore = [
    "E501",  # Suppress line-too-long warnings: trust black's judgement on this one
    "C901",  # Complex structure
    "A004",  # Module attribute shadowing
    "B008",  # Do not perform function calls in argument defaults
]
