[project]
name = "securechain-vexgen"
version = "1.1.3"
description = "A simple generating tool of Vulnerability Exploitability eXchange (VEX) and Threat Intelligence eXchange (TIX) files"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi==0.121.3",
    "uvicorn==0.38.0",
    "pydantic-settings==2.12.0",
    "pymongo==4.15.4",
    "neo4j==6.0.3",
    "GitPython==3.1.45",
    "regex==2025.11.3",
    "pyjwt==2.10.1",
    "aiohttp==3.13.2",
    "aiofiles==25.1.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.6",
]
test = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
exclude = ["tests*", "dev*"]

[tool.hatch.build.targets.sdist]
exclude = ["tests*", "dev*"]

[tool.ruff.lint]
select = [
    "A",   # prevent using keywords that clobber python builtins
    "B",   # bugbear: security warnings
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF"  # the ruff developer's own rules
]

ignore = [
    "E501",  # Suppress line-too-long warnings: trust black's judgement on this one
    "C901",  # Complex structure
    "A004",  # Module attribute shadowing
    "B008",  # Do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "database: Tests requiring database",
]
asyncio_mode = "auto"